Fix "About" page's server thumbnail margins on mobile
On mobile view for the "About" page, the server thumbnail is partially cut off by the header bar. Adding a 30px top margin fixes this.

--- a/layout-single-column.css
+++ b/layout-single-column.css
@@ -3304,6 +3304,11 @@ body.embed .button.logo-button:hover,
   .layout-single-column .navigation-panel .column-link:nth-child(12) {
     order: 12;
   }
+
+  /* Fix "About" page's server thumbnail margins */
+  .about__header__hero {
+    margin-top: 30px;
+  }
 }
 
 /* Retweet animation */
